-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.3
-
None
-
Windows 10
-
-
7fa8e78cc2 (qt/qtmultimedia/dev) fdc0ac42d6 (qt/qtmultimedia/6.3) 1233123d72 (qt/qtmultimedia/6.2) 1233123d72 (qt/tqtc-qtmultimedia/6.2)
There is a huge memory leak (10-20MB) on each destruction of MediaPlayer.
Regression from 6.2.2. Probably caused by this change https://codereview.qt-project.org/c/qt/qtmultimedia/+/386480 (I haven't tried to revert it locally and check, but this is most significant change in Windows media playback since 6.2.2).
Attached simple example that reloads (via Loader) MediaPlayer each 1 sec. You need just run it and observe the process memory consumption in Process Explorer.
- relates to
-
QTBUG-100363 [REG 6.2.2 - 6.2.3] Video is always black with OpenGL RHI
-
- Closed
-
| For Gerrit Dashboard: QTBUG-100341 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 393126,2 | Windows: Fix texture leak on media player | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 393417,3 | Windows: Fix texture leak on media player | 6.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 393418,3 | Windows: Fix texture leak on media player | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |