Windows: Fix texture leak on media player

Textures were being created in D3DPresentEngine::createVideoSamples()
and never released.

Fixes: QTBUG-100341
Change-Id: I31c9bbfa5a6a6b626685c45980adcbf23a473582
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 7fa8e78cc2417ab245c2e662dc2ece77329fed31)
Reviewed-by: André de la Rocha <andre.rocha@qt.io>